--- a/src/app/main/pages/andon/settings/settings.component.scss
+++ b/src/app/main/pages/andon/settings/settings.component.scss
@@ -160,6 +160,54 @@
 }
 
 
+.container-table {
+    margin-top: 30px;
+    overflow: auto;
+    margin-left: 80px;
+}
+
+table {
+    width: 500px;
+    .table__cell {
+        min-width: 90px;
+        padding: 0px 8px;
+    }
+}
+
+.theader {
+    background: #f0eefc;
+    color: #2b2b2b;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.container-expansion2 {
+    display: flex;
+    flex-direction: row;
+   
+    &__form{
+       display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-bottom: 30px;
+        &--input{
+            width: 300px;
+            margin-left: 20px;
+            margin-bottom: 10px;
+        }
+        &--btn{
+            max-width: 150px;
+            margin-left: 90px;
+            background: #6200ee;
+            color: white;
+            margin-top: 20px;
+        }
+    }
+}   
+
+
 /* 
 ##Dispositivo = Tablets de baja resolucion y telefnos Mobiles (horizontal)
 ##Resolucion = B/w 481px to 767px
