--- a/src/assets/css/meraki.scss
+++ b/src/assets/css/meraki.scss
@@ -101,6 +101,10 @@
             width: 100% !important;
             margin: 4px 0px !important;
         }
+
+        &--desktop {
+            margin: 0px 4px !important;
+        }
     }
 
     &__icon {
