--- a/src/app/main/pages/quality/external-events/external-events.component.html
+++ b/src/app/main/pages/quality/external-events/external-events.component.html
@@ -22,21 +22,28 @@
                         </mat-error>
                     </mat-form-field>
 
-                    <mat-form-field appearance="outline" id="result"  class="container-form__work__input"
-                    [ngClass]="isMobile ? 'container-form__work__input--mobile' : 'container-form__work__input--desktop'">
+                    <mat-form-field *ngIf="component$ | async as components"  class="container-form__work__input"
+                        [ngClass]="isMobile ? 'container-form__work__input--mobile' : 'container-form__work__input--desktop'"
+                        appearance="outline">
                         <mat-label>Componente</mat-label>
-                        <mat-select formControlName="component">
-                            <mat-option *ngFor="let item of componentList" [value]="item">
-                                {{item.name}} 
+                        <input autocomplete="off" formControlName="component" [matAutocomplete]="autocomplete" type="text"
+                            matInput />
+                        <mat-autocomplete multiple  autoActiveFirstOption #autocomplete="matAutocomplete">
+                            <mat-option (click)="onAddComponent()" [value]="">
+                            <mat-icon>add_circle_outline</mat-icon>Añadir/Eliminar
                             </mat-option>
-                        </mat-select>
-                        <mat-hint *ngIf="!(componentList)">
+                            <mat-option  *ngFor="let item of components" [value]="item.name">
+                            {{ item.name }}
+                            </mat-option>
+                        </mat-autocomplete>
+                        <mat-hint *ngIf="!(component$ | async)">
                             <mat-progress-bar mode="indeterminate"></mat-progress-bar>
                             <p>Cargando lista ...</p>
                         </mat-hint>
-    
-                        <mat-error *ngIf="externalForm.controls['component'].errors">
-                            Campo <strong>requerido.</strong>
+                        <mat-error>
+                            <span *ngIf="externalForm.get('component').errors?.required">Por favor, complete el campo.</span>
+                            <span *ngIf="externalForm.get('component').errors?.invalid">Dato inválido. Complete con alguna opción
+                            válida.</span>
                         </mat-error>
                     </mat-form-field>
 
@@ -76,7 +83,7 @@
                             matInput />
                         <mat-autocomplete autoActiveFirstOption #miningOperationAutocomplete="matAutocomplete">
                             <mat-option (click)="onAddminingOperation()" [value]="">
-                            <mat-icon>add_circle_outline</mat-icon>Añadir
+                            <mat-icon>add_circle_outline</mat-icon>Añadir/Eliminar
                             </mat-option>
                             <mat-option *ngFor="let item of miningOperations" [value]="item.name">
                             {{ item.name }}
